added SDK metadata
