# files-api-sdk/files_api_sdk/models/__init__.py
@@ -1,22 +1,0 @@
-# coding: utf-8
-
-# flake8: noqa
-"""
-    FastAPI
-
-    No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
-
-    The version of the OpenAPI document: 0.1.0
-    Generated by OpenAPI Generator (https://openapi-generator.tech)
-
-    Do not edit the class manually.
-"""  # noqa: E501
-
-
-# import models into model package
-from files_api_sdk.models.file_metadata import FileMetadata
-from files_api_sdk.models.get_files_response import GetFilesResponse
-from files_api_sdk.models.http_validation_error import HTTPValidationError
-from files_api_sdk.models.put_file_response import PutFileResponse
-from files_api_sdk.models.validation_error import ValidationError
-from files_api_sdk.models.validation_error_loc_inner import ValidationErrorLocInner
