# openapi.json
@@ -7,8 +7,11 @@
   "paths": {
     "/v1/files/{file_path}": {
       "put": {
+        "tags": [
+          "Files"
+        ],
         "summary": "Upload File",
-        "description": "Upload a file.",
+        "description": "Upload or update a file.",
         "operationId": "upload_file_v1_files__file_path__put",
         "parameters": [
           {
@@ -42,6 +45,16 @@
               }
             }
           },
+          "201": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/PutFileResponse"
+                }
+              }
+            },
+            "description": "Created"
+          },
           "422": {
             "description": "Validation Error",
             "content": {
@@ -55,6 +68,9 @@
         }
       },
       "head": {
+        "tags": [
+          "Files"
+        ],
         "summary": "Get File Metadata",
         "description": "Retrieve file metadata.\n\nNote: by convention, HEAD requests MUST NOT return a body in the response.",
         "operationId": "get_file_metadata_v1_files__file_path__head",
@@ -76,7 +92,34 @@
               "application/json": {
                 "schema": {}
               }
+            },
+            "headers": {
+              "Content-Type": {
+                "description": "The [MIME type](https://developer.mozilla.org/en-US/docs/Web/HTTP/Basics_of_HTTP/MIME_types/Common_types) of the file.",
+                "example": "text/plain",
+                "schema": {
+                  "type": "string"
+                }
+              },
+              "Content-Length": {
+                "description": "The size of the file in bytes.",
+                "example": 512,
+                "schema": {
+                  "type": "integer"
+                }
+              },
+              "Last-Modified": {
+                "description": "The last modified date of the file.",
+                "example": "Thu, 01 Jan 2022 00:00:00 GMT",
+                "schema": {
+                  "type": "string",
+                  "format": "date-time"
+                }
+              }
             }
+          },
+          "404": {
+            "description": "File not found for the given `file_path`."
           },
           "422": {
             "description": "Validation Error",
@@ -91,6 +134,9 @@
         }
       },
       "get": {
+        "tags": [
+          "Files"
+        ],
         "summary": "Get File",
         "description": "Retrieve a file.",
         "operationId": "get_file_v1_files__file_path__get",
@@ -127,6 +173,9 @@
         }
       },
       "delete": {
+        "tags": [
+          "Files"
+        ],
         "summary": "Delete File",
         "description": "Delete a file.\n\nNOTE: DELETE requests MUST NOT return a body in the response.",
         "operationId": "delete_file_v1_files__file_path__delete",
@@ -165,6 +214,9 @@
     },
     "/v1/files": {
       "get": {
+        "tags": [
+          "Files"
+        ],
         "summary": "List Files",
         "description": "List files with pagination.",
         "operationId": "list_files_v1_files_get",
